Fix; heroku deploy fail

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "13.2.4"
+    "node": "13.x"
   },
   "scripts": {
     "dev": "next dev",
